--- a/package.json
+++ b/package.json
@@ -9,12 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.68.6",
+    "@react-three/fiber": "^8.13.0",
     "@types/node": "20.2.3",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
+    "@types/three": "^0.152.0",
     "next": "13.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "three": "^0.152.2",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.23",
+    "tailwindcss": "^3.3.2"
   }
 }
