--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "three": "^0.152.2",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "@codemirror/language": "^6.8.0",
+    "@codemirror/legacy-modes": "^6.3.2",
+    "@uiw/codemirror-theme-github": "^4.21.5",
+    "@uiw/react-codemirror": "^4.21.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
